--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -5,12 +5,12 @@
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     margin-bottom: 2rem;
-    background-color: #fff;
+    background-color: var(--card-primary-color);
     padding: 1.5rem;
-    color: rgb(58, 50, 50);
+    color: var(--secondary-color);
 }
 .card-component span {
-    color: #0e0f0e;
+    color: var(--primary-color);
 }
 
 .card-component  .img-and-name-container {
@@ -22,7 +22,7 @@
         align-self: center;
         font-size: 1.8rem;
         font-weight: bold;
-        color: rgb(21, 21, 21);
+        color: var(--txt-primary-color);
     }
     img {
         width: 100%;
@@ -53,9 +53,9 @@
     width: fit-content;
     padding: 0.5rem;
     border-radius: 10px;
-    background-color: white;
+    background-color: var(--card-primary-color);
     span{
-        color: black;
+        color: var(--primary-color);
     }
 }
 .remove-post.show{
@@ -66,10 +66,10 @@
     width: 7vw;
     padding: 0.5rem;
     border-radius: 10px;
-    background-color: white;
+    background-color: var(--card-primary-color);
     transition: opacity 0.3s ease;
     span{
-        color: black;
+        color: var(--primary-color);
     }
 }
 .card-component .container-wt-opt-img-info .userPoster-info-container {
@@ -82,9 +82,9 @@
 }
 
 .following {
-    color: rgb(246, 238, 238); /* Color para el estado "Siguiendo" */
-    background-color: #9e9b9b;
-    border: 1px solid rgb(122, 117, 117);
+    color: var(--following-color); /* Color para el estado "Siguiendo" */
+    background-color: var(--following-bg-color);
+    border: 1px solid var(--following-border-cnt-color);
 }
 
 .card-component .userPoster-.userPoster-info-container button {
@@ -112,7 +112,7 @@
 .card-component .userPoster-info-container .userPoster {
     font-weight: bold;
     font-size: 1.6rem;
-    color: rgb(17, 16, 16);
+    color: var(--primary-color);
     &:hover{
         cursor: pointer;
     }
@@ -122,7 +122,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    background-color: #c5c0c0;
+    background-color: var(--cnt-description-color);
     border-radius: 8px;
     margin-bottom: 1rem;
 }
@@ -131,10 +131,11 @@
     font-weight: bold;
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
+    color: var(--temporary-color);
 }
 
 .card-component .post-description {
-    color: #555;
+    color: var(--txt-description-color);
     font-size: 1rem;
     line-height: 1.4rem;
 }
@@ -143,7 +144,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem 0;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid var(--txt-primary-color);
     margin-top: 1rem;
 }
 
@@ -155,17 +156,17 @@
 
 .card-component .container-comments .comments .userPoster {
     font-weight: bold;
-    color: #444;
+    color: var(--primary-color);
 }
 
 .card-component .container-comments .comments .comment-content {
     font-size: 0.9rem;
-    color: #666;
+    color: var(--txt-primary-color);
 }
 
 .card-component .container-comments .comments .date-comment {
     font-size: 0.8rem;
-    color: #999;
+    color: var(--txt-primary-color);
 }
 
 .card-component .date-container {
@@ -211,7 +212,7 @@
             }
             span {
                 font-size: 0.9rem;
-                color: #777;
+                color: var(--txt-primary-color);
                 margin-right: 0.5rem;
             }
             svg {
@@ -234,15 +235,16 @@
             .divSpan-lists{
                 border: 1px solid;
                 border-radius: 5px;
-                background-color: white;
+                background-color: var(--card-primary-color);
                 padding: 1%;
                 width: 11rem;
                 ul{
-                    list-style-type: none; /* Elimina los puntos */
+                    list-style-type: none;
                     margin: 0;
                     padding: 0;
                     li{
                         cursor: pointer;
+                        color: var(--txt-primary-color);
                     }
                     .create-list{
                         font-weight: bold;
@@ -251,7 +253,7 @@
             }
             .list-input-container{
                 border: 1px solid;
-                background-color: white;
+                background-color: var(--card-primary-color);
                 border-radius: 5px;
 
                 width: 16rem;
@@ -274,7 +276,7 @@
 
 .show-more-btn {
     margin-top: 1rem;
-    color: #1e1e1e;
+    color: var(--primary-color);
     cursor: pointer;
     font-size: 1rem;
     transition: color 0.3s ease;
