--- a/src/components/HeaderComponent/HeaderComponent.css
+++ b/src/components/HeaderComponent/HeaderComponent.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     position: fixed;
-    background-color: white;
+    background-color: var(--card-primary-color);
     box-shadow: 1px 1px 23px black;
     z-index: 11;
 }
@@ -32,7 +32,7 @@
     align-items: center;
     align-self: center;
     svg{
-        fill: rgb(11, 11, 11);
+        fill: var(--primary-color);
         width: 2rem;
         height: auto;
         cursor: pointer;        
@@ -45,13 +45,13 @@
     box-shadow: 2px 2px 5px black;
     position: absolute;
     width: 15rem;
-    background-color: white;
+    background-color: var(--card-primary-color);
     top: 4rem;
     left: 50%;
     transform: translateX(-67%);
     span{
         padding: 0.35rem;
-        color: black;
+        color: var(--primary-color);
     }
 }
 
@@ -65,7 +65,7 @@
     }
     &:hover{
         cursor: pointer;
-        background-color: #e4e0e0;
+        background-color: var(--card-primary-color-hover);
     }
 }
 
@@ -76,7 +76,7 @@
     box-shadow: 2px 2px 5px black;
     position: absolute;
     width: 15rem;
-    background-color: white;
+    background-color: var(--card-primary-color);
     top: 4rem;
     left: 50%;
     transform: translateX(-67%);
@@ -90,8 +90,8 @@
     position: absolute; 
     top: 11.4vh; 
     right: -13.75vw; 
-    background-color: white; 
-    border: 1px solid #ccc; 
+    background-color: var(--card-primary-color); 
+    border: 1px solid var(--card-primary-color-hover); 
     border-radius: 8px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     padding: 10px; 
@@ -118,7 +118,7 @@
     padding: 10px; 
     cursor: pointer; 
     transition: background-color 0.3s; 
-    color: black;
+    color: var(--primary-color);
 }
 
 .profile-opt li:hover {
@@ -127,17 +127,17 @@
 
 .notifications-container{
     position: absolute;
-    background: white;
+    background: var(--card-primary-color);
     top: 11.4vh; 
     right: -17.75vw; 
-    border: 1px solid #ccc; 
+    border: 1px solid var(--card-primary-color-hover); 
     border-radius: 8px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 8px var(--primary-color); 
     padding: 0.5rem;
     transition: right 0.5s ease;
     z-index: 9;
     span{
-        color: gray;
+        color: var(--primary-color);
     }
 }
 
@@ -169,12 +169,12 @@
     .name{
         font-weight: bold;
         font-size: 1.25rem;
-        color: black;
+        color: var(--primary-color);
     }
     span{
         font-weight: normal;
         font-style: oblique;
-        color: gray;
+        color: var(--following-bg-color);
         font-size: 1rem;
     }
 }
