--- a/src/components/MainComponent/MainComponent.css
+++ b/src/components/MainComponent/MainComponent.css
@@ -1,25 +1,82 @@
-.main-component{
+.main-component {
     width: 100vw;
-    max-height: 100vh;
+    height: 100vh;
     display: flex;
-    justify-content: center ;
+    position: relative;
+    justify-content: center;
+  }
+  
+  .main-component .cnt-img-spans{
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top:-7rem
+  }
+  
+  .cnt-images {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 10px;
-
-}
-
-.login, .signup{
-    background-color:var(--btn-primary-color);
+    width: 50rem;
+    height: 300px;
+  }
+  
+  .cnt-images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .cnt-images img:hover {
+    transform: scale(1.05);
+  }
+  
+  /* Layout adjustments for the text and buttons */
+  .message-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .message-container h2 {
+    color: var(--txt-primary-color);
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+  }
+  
+  .login, .signup {
+    background-color: var(--btn-primary-color);
     cursor: pointer;
-    width: 5vw;
-    height: 4vh;
+    padding: 12px 36px;
+    width: 5rem;
+    font-size: 16px;
+    color: var(--primary-color);
+    font-weight: bold;
+    border-radius: 30px;
+    transition: background-color 0.2s ease, transform 0.3s, box-shadow 0.3s;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 6px;
-    transition: 0.2s ease-in-out;
-    color: var(--primary-color);
-    font-weight: bold;
-    &:hover{
-        background-color: var(--btn-primary-color-hover);
-    }
-}
+    margin-top: 10px;
+  }
+  
+  .login:hover, .signup:hover {
+    background-color: var(--btn-primary-color-hover);
+    transform: translateY(-3px);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+  }
+  
+  .signup {
+    background-color: var(--secondary-color);
+  }
+  
