--- a/src/components/MainComponent/MainComponent.css
+++ b/src/components/MainComponent/MainComponent.css
@@ -7,7 +7,7 @@
 }
 
 .main-component .cnt-img-sliders {
-  width: 75vw;
+  width: 90vw;
   height: 100vh;
   margin: auto;
   display: flex;
@@ -15,6 +15,36 @@
   align-items: center;
   position: relative;
   overflow: hidden;
+}
+
+.cnt-img-sliders .cnt-user-access {
+  width: 30vw;
+  height: 50vh;
+  background: linear-gradient(145deg, #6f6e6d, #201f1f); 
+  border: 1px solid rgba(255, 255, 255, 0.2); /* Bordes sutiles */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5), inset 0 1px 4px rgba(255, 255, 255, 0.1); /* Sombra suave */
+  border-radius: 16px; /* Bordes más redondeados */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  backdrop-filter: blur(5px); /* Efecto de desenfoque */
+}
+
+.cnt-img-sliders .cnt-user-access .app-title {
+  position: absolute;
+  top: 2rem;
+  font-family: "Martian Mono", monospace;
+  font-weight: 400;
+  font-size: 2.5rem;
+  color: white;
+  display: inline-block;
+  overflow: hidden;
+  border-right: 2px solid rgba(255, 255, 255, 0.8);
+  white-space: nowrap;
+  animation: blink 1.5s step-end infinite;
 }
 
 .cnt-slider {
@@ -34,6 +64,18 @@
   border-radius: 5%;
   object-fit: cover;
   box-shadow: 1px 6px 13px black;
+}
+
+@keyframes blink {
+  0% {
+    border-right-color: white;
+  }
+  50% {
+    border-right-color: transparent;
+  }
+  100% {
+    border-right-color: white;
+  }
 }
 
 @keyframes scroll {
