--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&family=Outfit:wght@100..900&display=swap');
 .outfit-favlist {
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
   font-weight: 100;
   font-style: normal;
+}
+
+.martian-mono{
+  font-family: "Martian Mono", monospace;
 }
 
 :root {
