--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -5,7 +5,7 @@
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     margin-bottom: 2rem;
-    background-color: var(--card-primary-color);
+    background: linear-gradient(145deg, #6f6e6d, #201f1f);
     padding: 1.5rem;
     color: var(--secondary-color);
 }
@@ -22,7 +22,7 @@
         align-self: center;
         font-size: 1.8rem;
         font-weight: bold;
-        color: var(--txt-primary-color);
+        color: var(--txt-secondary-color);
     }
     img {
         width: 100%;
