--- a/src/components/HeaderComponent/HeaderComponent.css
+++ b/src/components/HeaderComponent/HeaderComponent.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     position: fixed;
-    background-color: var(--card-primary-color);
+    background: linear-gradient(145deg, #6f6e6d, #201f1f);
     box-shadow: 1px 1px 23px black;
     z-index: 11;
 }
@@ -19,11 +19,32 @@
     filter: drop-shadow(2px 2px 2px black); 
 }
 
-.header input{
-    height: 1rem;
+.header input {
+    height: 1rem; 
+    padding: 0.5rem 1rem;
+    border: 2px solid rgba(255, 255, 255, 0.3); 
     align-self: center;
-}
-
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.1); 
+    color: white; 
+    font-family: "Martian Mono", monospace; 
+    font-size: 1rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3), inset 0 1px 4px rgba(255, 255, 255, 0.1); 
+    outline: none; 
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .header input:focus {
+    border-color: #19ec02; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5), inset 0 1px 6px rgba(25, 236, 2, 0.3);
+    background: rgba(255, 255, 255, 0.2); 
+  }
+  
+  .header input::placeholder {
+    color: rgba(255, 255, 255, 0.6); /* Color del texto del placeholder */
+    font-style: italic;
+  }
+  
 .header .container-opt{
     display: flex;
     width: 15rem;
@@ -118,6 +139,7 @@
     padding: 10px; 
     cursor: pointer; 
     transition: background-color 0.3s; 
+    border-radius: 5px;
     color: var(--primary-color);
 }
 
@@ -183,4 +205,17 @@
     flex-direction: column;
     justify-content: space-between;
     height: 8vh;
+}
+
+.app-title{
+    font-family: "Martian Mono", monospace;
+    font-weight: 400;
+    font-size: 1.75rem;
+    color: white;
+    display: inline-block;
+    overflow: hidden;
+    border-right: 2px solid rgba(255, 255, 255, 0.8);
+    white-space: nowrap;
+    animation: blink 1.5s step-end infinite;
+    margin-left: 1rem;
 }
