--- a/src/components/LoginComponent/LoginComponent.css
+++ b/src/components/LoginComponent/LoginComponent.css
@@ -6,18 +6,18 @@
     border-radius: 15px;
     padding: 4rem;
     background: linear-gradient(145deg, #6f6e6d, #201f1f); 
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5), inset 0 1px 4px rgba(255, 255, 255, 0.1); /* Sombra exterior + luz interior */
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5), inset 0 1px 4px rgba(255, 255, 255, 0.1);
     width: 100%;
-    max-width: 400px; /* Controla el ancho máximo */
+    max-width: 400px;
     margin: auto;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, background 0.5s ease-in-out;
     overflow: hidden;
-    backdrop-filter: blur(5px); /* Desenfoque suave */
+    backdrop-filter: blur(5px);
   }
   
   .login-container:hover {
-    transform: translateY(-5px); /* Sutil elevación al pasar el mouse */
-    background: linear-gradient(145deg, #6f6e6d, #7b7a7a); 
+    transform: translateY(-5px);
+    background: linear-gradient(145deg, #6f6e6d, #414141); 
   }
   
   .login-container h1 {
