--- a/src/components/MainComponent/MainComponent.css
+++ b/src/components/MainComponent/MainComponent.css
@@ -21,16 +21,16 @@
   width: 30vw;
   height: 50vh;
   background: linear-gradient(145deg, #6f6e6d, #201f1f); 
-  border: 1px solid rgba(255, 255, 255, 0.2); /* Bordes sutiles */
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5), inset 0 1px 4px rgba(255, 255, 255, 0.1); /* Sombra suave */
-  border-radius: 16px; /* Bordes más redondeados */
+  border: 1px solid rgba(255, 255, 255, 0.2); 
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5), inset 0 1px 4px rgba(255, 255, 255, 0.1); 
+  border-radius: 16px; 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
   overflow: hidden;
-  backdrop-filter: blur(5px); /* Efecto de desenfoque */
+  backdrop-filter: blur(5px); 
 }
 
 .cnt-img-sliders .cnt-user-access .app-title {
@@ -91,7 +91,7 @@
   cursor: pointer;
   padding: 12px 36px;
   font-size: 16px;
-  color: var(--primary-color);
+  color: var(--btn-letter-color);
   font-weight: bold;
   border-radius: 30px;
   transition: background-color 0.2s ease, transform 0.3s, box-shadow 0.3s;
