--- a/src/components/ProfileInfoComponent/ProfileInfoComponent.css
+++ b/src/components/ProfileInfoComponent/ProfileInfoComponent.css
@@ -3,11 +3,12 @@
     display: flex;
     flex-direction: column;
     width: 75rem;
-    background-color: var(--card-primary-color);
+    background: linear-gradient(145deg, #6f6e6d, #201f1f);
     border-radius: 12px;
     padding: 2rem;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     color: var(--secondary-color);
+    top: -4rem;
 }
 
 .profile-user-card .imgprofile-names-info {
