--- a/src/components/SignUpComponent/SignUpComponent.css
+++ b/src/components/SignUpComponent/SignUpComponent.css
@@ -10,7 +10,7 @@
     width: 100%;
     max-width: 400px; 
     margin: auto;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, background 0.5s ease-in-out;
     overflow: hidden;
     backdrop-filter: blur(5px);
   }
