--- a/src/components/UpdateProfileComponent/UpdateProfileComponent.css
+++ b/src/components/UpdateProfileComponent/UpdateProfileComponent.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--card-primary-color);
+    background: linear-gradient(145deg, #6f6e6d, #201f1f);
     width: 50rem;
     margin: 2rem auto;
     padding: 2rem;
